Use updated version.h if available. Add single fallback header if version.h is missing.

--- a/src/Include/version.h.in
+++ b/src/Include/version.h.in
@@ -28,7 +28,7 @@
 
 #define FLIGHTGEAR_VERSION "@VERSION@"
 
-#define HUDSON_BUILD_NUMBER "@HUDSON_BUILD_NUMBER@"
+#define HUDSON_BUILD_NUMBER @HUDSON_BUILD_NUMBER@
 #define HUDSON_BUILD_ID "@HUDSON_BUILD_ID@"
 #define REVISION "@REVISION@"
 
