Make out of source builds again work.

--- a/src/Main/Makefile.am
+++ b/src/Main/Makefile.am
@@ -135,4 +135,4 @@ metar_LDADD = \
         -lz $(base_LIBS)
 
 
-INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src
+INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/src -I$(top_builddir)/src
