--- a/package/mac/nightly.plist.in
+++ b/package/mac/nightly.plist.in
@@ -15,7 +15,7 @@
 	<key>CFBundleIdentifier</key>
 	<string>org.flightgear.FlightGear</string>
 	<key>CFBundleVersion</key>
-	<string>2.0</string>
+	<string><%= VERSION %></string>
 	<key>CFBundleShortVersionString</key>
 	<string>unstable nightly build</string>
 	<key>LSMinimumSystemVersion</key>
