--- a/src/Include/config_cmake.h.in
+++ b/src/Include/config_cmake.h.in
@@ -19,5 +19,8 @@
 #define VERSION "@FLIGHTGEAR_VERSION"
 
 #cmakedefine ENABLE_UIUC_MODEL
+#cmakedefine ENABLE_LARCSIM
+#cmakedefine ENABLE_YASIM
+#cmakedefine ENABLE_JSBSIM
 
 #define PKGLIBDIR "@PKGLIBDIR"
