Fix linkage on Linux, by re-ordering libraries

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,8 +1,9 @@
 
 include_directories(${PROJECT_SOURCE_DIR})
 
+# note order here affects link order, and hence linking correctness
+# on systems with a traditional ld (eg, GNU ld on Linux)
 foreach( mylibfolder 
-		AIModel
 		Airports
 		Aircraft
 		ATC
@@ -14,7 +15,8 @@ foreach( mylibfolder
 		Instrumentation
 		Model
 		MultiPlayer
-        Navaids
+    AIModel
+    Navaids
 		Network
 		Scenery
 		Scripting
