Install rules, build rules for terrasync, fgviewer, yasim

--- a/src/Input/CMakeLists.txt
+++ b/src/Input/CMakeLists.txt
@@ -41,3 +41,5 @@ target_link_libraries(js_demo
 	${ZLIB_LIBRARY})
 
 flightgear_component(Input "${SOURCES}")
+
+install(TARGETS fgjs js_demo RUNTIME DESTINATION bin)
